update intro, adding document embeddings

--- a/paper/Manuscript.Rmd
+++ b/paper/Manuscript.Rmd
@@ -34,15 +34,15 @@ for (filename in list.files(here("code/functions"))){
 
 ```
 
-*This manuscript has been enriched by commentary from Tarik Abou-Chadi, Daniel Bischof, Luis Cornago Bonal, Sophia Hunger, Antonio Valentim, Klaudia Wegschaider, Lisa Zehnter.*
+*This manuscript has been enriched by commentary from Tarik Abou-Chadi, Daniel Bischof, Luis Cornago Bonal, Sophia Hunger, Thomas Meyer, Antonio Valentim, Klaudia Wegschaider, and Lisa Zehnter.*
 
 # Introduction
 
 One of the most prominent explanations for parties' electoral success in scholarly and public debate is the issue agenda at a given election: the more prominent an issue was among political parties, news media, and voters, the more it would influence the latter's electoral decision making. Certain issues are therefore more favorable to given parties and parties will try to focus on 'their' issues in public communication [@Budge1983; @Petrocik1996; @Walgrave2012]. In extension, it is assumed that the main form of electoral competition in contemporary Western European democracies is *issue competition*, in the sense that parties compete to bring 'their' issue on the agenda [@GreenPedersen2019].
 
-The present paper sets out to challenge this simple model of issue ownership by looking into party competition *within* issues. Building on a large body of experimental work, I argue that - dependent on the relative emphasis of different considerations in public debate, also known as *emphasis framing* - any issue can be more or less favorable to a given party. As issues on the media agenda usually emerge externally [@Boydstun2013], issue ownership theory suggests that parties' electoral fate is statically bound to the media agenda of the day. My model of *frame competition* gives parties substantial agency by suggesting that political actors not only compete over *which* issues are talked about, but also *how*.
+The present paper sets out to challenge this simple model of issue ownership by looking into party competition *within* issues - specifically, the migration issue. Building on a large body of experimental work, I argue that - dependent on the relative emphasis of different considerations in public debate, also known as *emphasis framing* - any issue can be more or less favorable to a given party. As issues on the media agenda usually emerge externally [@Boydstun2013], issue ownership theory suggests that parties' electoral fate is statically bound to the media agenda of the day. My model of *frame competition* gives parties substantial agency by suggesting that political actors not only compete over *which* issues are talked about, but also *how*.
 
-I test this argument using data from the German 2017 Bundestag campaign, during which the immigration issue - which became salient after the 2015 refugee movements - dominated public debate in the media and among parties, as well as voters' perception of the most important problems in national politics. Using topic representations of media content and parties' manifestos as an anchor point, I track the similarity of the migration discourse in national newspapers to parties' communication about migration. Combining these daily similarity estimates with polling data from *Poll of Polls*[^1] using vector auto-regression (VAR) models [@Sims1980] and an instrumental variable approach, I assess whether parties' electoral prospects increase when the media discourse is more similar to a given party's representation of the migration issue. The findings potentially challenge the current model of party competition, underlining parties' agency even when the agenda is externally determined, and speak to the real-world implications of issue framing. More generally, this research locates political opportunity spaces within debates, rather than viewing political competition solely as a game of changing issue attention.
+I test this argument using data from German newspapers 2013-2019. During the first half of this period leading up to the lower house election 2017, the immigration issue - which became salient after the 2015 refugee movements - dominated public debate in the media and among parties, as well as voters' perception of the most important problems in national politics. Using vector representations of media content and parties' manifestos (so-called document embeddings), I track the similarity of the migration discourse in national newspapers to parties' communication about migration. Combining these daily similarity estimates with polling data from *Poll of Polls*[^1] using vector auto-regression (VAR) models [@Sims1980] and an instrumental variable approach, I assess whether parties' electoral prospects increase when the media discourse is more similar to a given party's representation of the migration issue. The findings potentially challenge the current model of party competition, underlining parties' agency even when the agenda is externally determined, and speak to the real-world implications of issue framing. More generally, this research locates political opportunity spaces within debates, rather than viewing political competition solely as a game of changing issue attention.
 
 [^1]: \url{https://www.politico.eu/europe-poll-of-polls/}
 
