make design consistent

--- a/paper/Manuscript.Rmd
+++ b/paper/Manuscript.Rmd
@@ -42,7 +42,7 @@ One of the most prominent explanations for parties' electoral success in scholar
 
 The present paper sets out to challenge this simple model of issue ownership by looking into party competition *within* issues - specifically, the migration issue. Building on a large body of experimental work, I argue that - dependent on the relative emphasis of different considerations in public debate, also known as *emphasis framing* - any issue can be more or less favorable to a given party. As issues on the media agenda usually emerge externally [@Boydstun2013], issue ownership theory suggests that parties' electoral fate is statically bound to the media agenda of the day. My model of *frame competition* gives parties substantial agency by suggesting that political actors not only compete over *which* issues are talked about, but also *how*.
 
-I test this argument using data from German newspapers 2013-2019. During the first half of this period leading up to the lower house election 2017, the immigration issue - which became salient after the 2015 refugee movements - dominated public debate in the media and among parties, as well as voters' perception of the most important problems in national politics. Using vector representations of media content and parties' manifestos (so-called document embeddings), I track the similarity of the migration discourse in national newspapers to parties' communication about migration. Combining these daily similarity estimates with polling data from *Poll of Polls*[^1] using vector auto-regression (VAR) models [@Sims1980] and an instrumental variable approach, I assess whether parties' electoral prospects increase when the media discourse is more similar to a given party's representation of the migration issue. The findings potentially challenge the current model of party competition, underlining parties' agency even when the agenda is externally determined, and speak to the real-world implications of issue framing. More generally, this research locates political opportunity spaces within debates, rather than viewing political competition solely as a game of changing issue attention.
+I test this argument using data from the German 2017 Bundestag campaign, during which the immigration issue - which became salient after the 2015 refugee movements - dominated public debate in the media and among parties, as well as voters' perception of the most important problems in national politics. Using vector representations of media content and parties' manifestos (so-called document embeddings), I track the similarity of the migration discourse in national newspapers to parties' communication about migration. Combining these daily similarity estimates with polling data from *Poll of Polls*[^1] using vector auto-regression (VAR) models [@Sims1980] and an instrumental variable approach, I assess whether parties' electoral prospects increase when the media discourse is more similar to a given party's representation of the migration issue. The findings potentially challenge the current model of party competition, underlining parties' agency even when the agenda is externally determined, and speak to the real-world implications of issue framing. More generally, this research locates political opportunity spaces within debates, rather than viewing political competition solely as a game of changing issue attention.
 
 [^1]: \url{https://www.politico.eu/europe-poll-of-polls/}
 
