Export document embeddings

--- a/code/embeddings/EstimateTopics.ipynb
+++ b/code/embeddings/EstimateTopics.ipynb
@@ -543,6 +543,15 @@
     "## write to csv\n",
     "meta.to_csv(\"data/processed/media/docs_topics_sims.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docvecs = model.document_vectors[meta.reduced_topic_label != \"Stock Market\"]"
+   ]
   }
  ],
  "metadata": {
