--- a/code/embeddings/EstimateTopics.ipynb
+++ b/code/embeddings/EstimateTopics.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,11 +546,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "docvecs = model.document_vectors[meta.reduced_topic_label != \"Stock Market\"]"
+    "docvecs = pd.DataFrame(model.document_vectors[meta.reduced_topic_label != \"Stock Market\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docvecs.to_csv(\"data/processed/embeddings/documents.csv\", index=False)"
    ]
   }
  ],
