save reduced topic vectors

--- a/code/embeddings/EstimateTopics.ipynb
+++ b/code/embeddings/EstimateTopics.ipynb
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,6 +492,16 @@
     "    ot_vectors = model.topic_vectors[ots] # get original topic vectors\n",
     "    rt_vector = np.mean(ot_vectors, axis=0) # calculate reduced topic vector\n",
     "    rt_vectors = pd.concat([rt_vectors, pd.DataFrame(rt_vector).T], axis=0) # add to dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## save\n",
+    "rt_vectors.to_csv(\"data/processed/embeddings/reduced_topics.csv\", index=False)"
    ]
   },
   {
